--- a/CellTower.ipynb
+++ b/CellTower.ipynb
@@ -9,14 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mapplot'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-47df6586949a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#from kNN import kNN\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m#from GreedyGraphColoring import GreedyGraphColoring\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mmapplot\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmapplot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'mapplot'"
+     ]
+    }
+   ],
    "source": [
-    "from downloadTowerData import downloadTowerData\n",
-    "from kNN import kNN\n",
-    "from GreedyGraphColoring import GreedyGraphColoring\n",
-    "from mapplot import mapplot\n",
+    "#from downloadTowerData import downloadTowerData\n",
+    "#from kNN import kNN\n",
+    "#from GreedyGraphColoring import GreedyGraphColoring\n",
+    "#from mapplot import mapplot\n",
     "\n"
    ]
   },
@@ -29,7 +41,8 @@
     "locations = downloadTowerData(filename)\n",
     "graph = kNN(locations,k)\n",
     "colors = GreedyGraphColoring(graph, M)\n",
-    "mapplot(locations, colors)"
+    "mapplot(locations, colors)\n",
+    "\n"
    ]
   },
   {
@@ -56,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
