Expanded the jupyter notebook cells

--- a/CellTower.ipynb
+++ b/CellTower.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "from downloadTowerData import downloadTowerData\n",
-    "from kNN import kNN\n",
+    "from kNN import knn_graph\n",
     "from GreedyGraphColoring import GreedyGraphColoring\n",
     "from mapplot import mapplot\n",
     "\n"
@@ -26,11 +26,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "filename = 'garbage.csv'\n",
     "locations = downloadTowerData(filename)\n",
-    "graph = kNN(locations,k)\n",
+    "locations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = 3\n",
+    "graph = knn_graph(locations,k)\n",
+    "\n",
+    "nx.draw(graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "colors = GreedyGraphColoring(graph, M)\n",
+    "\n",
+    "colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mapplot(locations, colors)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
