Stub functions are all working!

--- a/CellTower.ipynb
+++ b/CellTower.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "from downloadTowerData import downloadTowerData\n",
-    "from kNN import knn_graph\n",
+    "from kNN import kNN\n",
     "from GreedyGraphColoring import GreedyGraphColoring\n",
     "from mapplot import mapplot\n",
     "\n"
@@ -37,8 +37,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import networkx as nx\n",
+    "\n",
     "k = 3\n",
-    "graph = knn_graph(locations,k)\n",
+    "graph = kNN(locations,k)\n",
     "\n",
     "nx.draw(graph)"
    ]
@@ -49,6 +51,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
+    "M = 4\n",
+    "\n",
     "colors = GreedyGraphColoring(graph, M)\n",
     "\n",
     "colors"
